monitoring/prometheus-core.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-core
  namespace: monitoring
  labels:
    app: prometheus
    component: core
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-main
      labels:
        app: prometheus
        component: core
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v1.5.2
        args:
          - '-storage.local.retention=360h'
          - '-storage.local.memory-chunks=500000'
          - '-config.file=/etc/prometheus/prometheus.yml'
        ports:
        - name: webui
          containerPort: 9090
        resources:
          requests:
            cpu: 250m
            memory: 500M
          limits:
            cpu: 1000m
            memory: 2048M
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        - name: data-volume
          mountPath: /prometheus
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-core
      - name: data-volume
        persistentVolumeClaim:
          claimName: prometheus
