monitoring/redis-exporter-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    run: redis-exporter
  name: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis-exporter
  template:
    metadata:
      labels:
        run: redis-exporter
    spec:
      containers:
      - image: oliver006/redis_exporter
        name: exporter
