monitoring/state-metrics.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      containers:
      - name: kube-state-metrics
        image: registry.cn-shenzhen.aliyuncs.com/kim-docker/kube-state-metrics:v0.4.1
        ports:
        - containerPort: 8080
