monitoring/statsd-exporter-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: statsd-exporter
  namespace: default
  labels:
    app: statsd-exporter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: statsd-exporter
    spec:
      containers:
      - name: statsd-exporter
        image: prom/statsd-exporter:latest
        args:
          - '-statsd.add-suffix=false'
          - '-statsd.mapping-config=/etc/statsd/statsd_mapping.conf'
        ports:
        - name: metrics
          containerPort: 9102
        - name: statsd
          containerPort: 9125
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            cpu: 500m
            memory: 500M
        volumeMounts:
        - name: config-volume
          mountPath: /etc/statsd
      volumes:
      - name: config-volume
        configMap:
          name: statsd
