monitoring/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    component: core
  name: grafana
spec:
  ports:
  - nodePort: 31447
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
    component: core
  type: NodePort
