monitoring/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: prometheus
    component: core
  name: prometheus
spec:
  ports:
  - name: webui
    nodePort: 30300
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    component: core
  type: NodePort
