monitoring/redis-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9121'
  name: redis-exporter
spec:
  ports:
  - name: exporter
    port: 9121
    protocol: TCP
    targetPort: 9121
  selector:
    run: redis-exporter
  type: NodePort
