monitoring/statsd-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9102'
  name: statsd
  namespace: default
spec:
  ports:
  - name: metrics
    port: 9102
    protocol: TCP
    targetPort: 9102
  - name: statsd
    port: 9125
    protocol: UDP
    targetPort: 9125
  selector:
    app: statsd-exporter
  type: ClusterIP
