monitoring/monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "gf.xiaolumm.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: "prom.xiaolumm.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
